# cpp-upnp

./: .gitlab-ci.yml  CMakeLists.txt  README.md  cppupnp-config.cmake
.circleci/: config.yml
example/: CMakeLists.txt  add-port-mapping.cpp
include/: upnp.h  upnp.hpp
include/upnp/: config.h  device.h  error.h  http.h  igd.h  ssdp.h  url.h  xml.h
include/upnp/core/: beast.h  error_code.h  optional.h  result.h  variant.h
include/upnp/detail/: cancel.h  condition_variable.h  local_address_to.h  namespaces.h
include/upnp/detail/str/: consume_endpoint.h  istarts_with.h  parse_address.h  trim.h
include/upnp/impl/: igd.ipp  ssdp.ipp
src/: condition_variable.h  device.cpp  igd.cpp  local_address_to.h  parse_device.cpp  parse_device.h  ssdp.cpp  url.cpp  xml.cpp  xml.h
src/str/: consume_endpoint.h  consume_number.h  consume_until.h  istarts_with.h  parse_address.h  trim.h
test/: CMakeLists.txt  test-url.cpp
test/vectors/: test-vector-schema-01.xml  test-vector-ssdp-discover-response.txt
